# neuro-orchestrator

./: .gitignore  DESIGN.md  Dockerfile  LICENSE  PRODUCT.md  README.md  docker-compose.yml  package-lock.json  package.json  pytest.ini  requirements-dev.txt  requirements.txt  run_server.py  unzip.cmd
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
agents/: README.md
agents/clinical/: agent.md  agent.yaml
agents/data-management/: agent.md  agent.yaml
agents/masking/: agent.md  agent.yaml
agents/performance/: agent.md  agent.yaml
agents/pipeline-tools/: agent.md  agent.yaml
agents/statistics-research/: agent.md  agent.yaml
agents/stl/: agent.md  agent.yaml
agents/testing-qa/: agent.md  agent.yaml
agents/ui/: agent.md  agent.yaml
agents/ux/: agent.md  agent.yaml
config/: pipeline.yaml
docs/: index.html  motion.js  styles.css  ui-ux-parity-checklist.md
mcp/: README.md  pyproject.toml
mcp/src/neuro_orchestrator_mcp/: __init__.py  client.py  server.py
mcp/tests/: test_tools.py
scripts/: manual_mask_smoke.py  unzip.cmd
src/: orchestrator.py  web_server.py
src/pipeline/: adapters.py  group_stats.py  ingest.py  manifest.py  openneuro.py  persistence.py  progress.py  remesh.py  runner.py  state.py  topology.py  validators.py
src/static/: index.html  manual_mask.html
tests/: conftest.py  test_adapters.py  test_group_stats.py  test_ingest.py  test_integration_realdata.py  test_manifest.py  test_openneuro.py  test_progress.py  test_remesh.py  test_state.py  test_topology.py  test_validators.py  test_web_api.py
(+5 files in other folders)
