[project]
name = "neuro-orchestrator-mcp"
version = "0.1.0"
description = "MCP server exposing the neuro-orchestrator neuroimaging pipeline as tools."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "rogerjs93" }]
keywords = ["mcp", "neuroimaging", "fmri", "pipeline", "bids"]
dependencies = [
  "mcp[cli]>=1.2",
  "httpx>=0.27",
]

[project.scripts]
neuro-orchestrator-mcp = "neuro_orchestrator_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neuro_orchestrator_mcp"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
